[package]
name = "moonraker"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "*"
serde = "*"
#zbus = "2.1"
zvariant = "*"

aes = "0.8"
digest = "0.10"
hmac = "0.12"
pbkdf2 = "0.11"
rand = "*"
sha2 = "0.10"

dirs = "4.0"
tempfile = "3.3"

[dependencies.async-std ]
version = "*"
features = ["attributes"]

[dependencies.cipher]
version = "*"
features = ["rand_core"]

[dependencies.cbc]
version = "0.1"

[dependencies.zeroize]
version = "*"
features = ["zeroize_derive"]

[dev-dependencies]
libsecret = "0.1"
gio = "0.15"
